# happy_voice

./: README.md
happy_stt/: Dockerfile  docker-compose.yml  fastrtps_profile.xml  package.xml  requirements.txt  setup.cfg  setup.py  start_stt.sh
happy_stt/config/: stt_params.yaml
happy_stt/happy_stt/: speech_to_text.py
happy_stt/launch/: launch_stt.launch.py
happy_tts/: package.xml  setup.cfg  setup.py
happy_tts/happy_tts/: launch_tts_server.py  text_to_speech.py
happy_voice/: package.xml  setup.cfg  setup.py
happy_voice/happy_voice/: yes_no.py
happy_voice/launch/: launch_voice_system.launch.py
happy_voice_msgs/: CMakeLists.txt  package.xml
happy_voice_msgs/srv/: TextToSpeech.srv
